# HIP_lucy_richardson

./: CMakeLists.txt  License  README.md  deconv.hpp  gpuOps.hip  wrapper_py.cc
include/: deconv.hpp  gpuOps.hpp
src/: deconv.hip  gpuOps.hip  wrapper_py.cc
tests/: test.cc
